--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,12 +1,19 @@
 <meta charset="UTF-8">
+<link rel="stylesheet" href="/assets/css/reset.css" type="text/css" />
 <link rel="stylesheet" href="/assets/css/style.css" type="text/css" />
+<link href="https://fonts.googleapis.com/css?family=Open+Sans|Open+Sans+Condensed:700|Pacifico&display=swap"
+    rel="stylesheet">
 <title>Burgers</title>
 <script src="https://code.jquery.com/jquery.js"></script>
 <script src="/assets/js/burgers.js"></script>
 </head>
 
 <body>
+    <div class="background">
+    </div>
     {{{ body }}}
+
 </body>
+
 
 </html>
